# QThw

./: CMakeLists.txt  README.md  icongen.py
resources/: icons.qrc  resources.qrc
src/: hardwaremodule.cpp  hardwaremodule.h  hardwarevisualizer.cpp  hardwarevisualizer.h  mainwindow.cpp  mainwindow.h  moduleinfodialog.cpp  moduleinfodialog.h
